# opencore-sharp

./: .gitmodules  LICENSE  README.md
native/: CMakeLists.txt  Makefile
